--- a/data/config/config.json
+++ b/data/config/config.json
@@ -2,5 +2,6 @@
     "Data": {
         "toto" : "papa",
         "toto1" : "papa1"
-    }
+    },
+    "Path" : "C:\\Users\\zak\\Projects\\p_framework\\data\\"
 }
